[metadata]
name = sqlstate
version = 0.1
description = A simple state framework to allow persistence of Python3 applications using SQLite3
long_description = file: README.md
url = https://github.com/marzukia/
author = Andryo Marzuki
author_email = stabbish@gmail.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
